# codex-account-manager

./: .dockerignore  .gitignore  AGENTS.md  GUI-redesign-plan.md  Python-packaging-plan.md  README.md  codex-account-manager-SPEC.md  codex-account-switcher-SPEC.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
docker/auth-export/: Dockerfile  Dockerfile.account  cx-auth-export-entrypoint.sh
docs/: CR-001-ui-redesign.md  CR-002-python-packaging.md  CR-003-cx-doctor.md  CR-004-doctor-ui.md  CR-005-enterprise-light-theme.md  CR-006-auto-refresh-settings.md  CR-007-cli-renew.md  CR-008-gui-renew-and-toolbar.md  CR-009-gui-update-check.md  CR-2026-06-cx-doctor.md  CR-2026-06-ui-redesign.md  README.md  bugfix-login-dialog-device-code-copy.md  codex-account-manager-spec.md  docker-auth-export.md  release-process.md  troubleshooting-windows-multiple-installations.md  windows-quick-install-import.md
docs/bugfix/: bugfix-0002-renew-missing-email-cache.md  bugfix-0003-renew-status-identity-fallback.md
docs/cr/: CR-001-ui-redesign.md  (+7 more)
gui/: cx_gui.py
scripts/: create_github_releases_from_version_commits.ps1  docs_status.py
src/: cx.py  cx_ranking.py
tests/: test_backup_archive.py  test_best_command.py  test_cli_renew.py  test_docs_status.py  test_doctor.py  test_gui_doctor.py  test_gui_runner.py  test_gui_update_check.py  test_json_output.py  test_manual.py  test_package_entrypoints.py  test_platform_paths.py  test_status_app_server.py  test_status_display.py  test_status_parallel.py  test_status_sort.py  test_ui_theme.py
(+7 files in other folders)
