[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cx-account-manager"
dynamic = ["version"]
description = "A Codex CLI account manager for switching and checking multiple Codex accounts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Michael Po" }
]
keywords = ["codex", "cli", "account", "account-manager"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Utilities"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10"
]
gui = [
  "ttkbootstrap>=1.10,<2"
]

[project.scripts]
cx = "cx:main"
cx-gui = "cx_account_manager.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cx", "cx_ranking"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "cx_account_manager.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E402", "E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false
